# CLog

./: CMakeLists.txt  LICENSE  README.md
examples/: CMakeLists.txt
examples/basic/: basic.c  callback.c  newline.c
examples/extra/: assert.c
include/clog/: clog.h  extra.h
src/: clog.c
